# prod_Enver

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  AssetManagement.sln  BUG_AUDIT_REPORT.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json
.github/: dependabot.yml
AssetManagement/: README.md
AssetManagement.Core/: AssetManagement.Core.csproj
AssetManagement.Infrastructure/: AssetManagement.Infrastructure.csproj  DependencyInjection.cs
AssetManagement.Tests/: AssetManagement.Tests.csproj  AssetManagementTests.cs
AssetManagement.Web/: AssetManagement.Web.csproj  Dockerfile  Program.cs
agent/: config.example.json  install-windows.ps1  (+1 more)
tools/b3d-converter/: README.md  pyproject.toml
tools/b3d-converter/b3d_converter/: __init__.py  assembly_glb_builder.py  b3d_binary_panels.py  binary_reader.py  cli.py  converter_pipeline.py  decompressed_analyzer.py  dictionary_parser.py  embedded_glb.py  enver3_parser.py  field_dictionary.py  geometry_detector.py  geometry_extractor.py  glb_writer.py  mesh_builder.py  numeric_scanner.py  object_stream_parser.py  panel_builder.py  panel_glb_builder.py  png_extractor.py  report.py  signatures.py  string_table.py  types.py  worker.py  xml_panel_extractor.py  zlib_analyzer.py  zlib_scanner.py
tools/b3d-converter/tests/: test_b3d_binary_panels.py  test_dictionary_parser.py  test_enver3_assembly.py  test_glb_writer.py  test_numeric_scanner.py  test_png_extractor.py  test_zlib_scanner.py
(+657 files in other folders)
